--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "element-ui": "^2.5.4",
     "scss-loader": "0.0.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
